--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         
-        <title>Nancy Crandall's Resume</title><!-- Title of your page -->
+        <title>Your Name Resume</title><!-- Title of your page -->
 	<!-- favicon begin -->
 <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
 <link rel="icon" href="img/favicon.ico" type="image/x-icon">
